--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "kids-code-tutorial",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
-  "type": "commonjs",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "npm i && node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js"
+    "build": "tsc",
+    "dev": "nodemon --delay --exec ts-node ./index.ts",
+    "start": "tsc && node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "So Tokumaru",
   "license": "MIT",
   "dependencies": {
     "express": "^4.19.2",
     "ws": "^8.17.0"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.12",
+    "nodemon": "^3.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
