--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
+  "type": "commonjs",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx ./index.ts",
-    "start": "tsc && node dist/index.js",
+    "client-dev": "cd client && npm run dev",
+    "client-build": "cd client && npm run build",
+    "dev": "tsx watch ./index.ts",
+    "start": "tsc && npm run client-build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "workspaces": [
+    "client",
+    "backend"
+  ],
+  "private": true,
   "author": "So Tokumaru",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2",
-    "ws": "^8.17.0"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
