--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "kids-code-tutorial",
-  "version": "0.0.1",
-  "description": "",
-  "main": "dist/index.js",
-  "type": "commonjs",
-  "scripts": {
-    "build": "tsc",
-    "client-dev": "cd client && npm run dev",
-    "client-build": "cd client && npm run build",
-    "dev": "tsx watch ./index.ts",
-    "start": "tsc && npm run client-build && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "workspaces": [
-    "client",
-    "backend"
-  ],
+  "name": "vite-react-typescript-starter",
   "private": true,
-  "author": "So Tokumaru",
-  "license": "MIT",
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon -w src/server -x tsx src/server/main.ts",
+    "start": "NODE_ENV=production tsx src/server/main.ts",
+    "build": "vite build"
+  },
   "dependencies": {
-    "express": "^4.19.2"
+    "blockly": "^11.1.0",
+    "express": "^4.18.2",
+    "level": "^8.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-resizable-panels": "^2.0.19",
+    "react-router-dom": "^6.23.1",
+    "tsx": "^4.3.0",
+    "typescript": "^5.3.2",
+    "uuid": "^9.0.1",
+    "vite-express": "*",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.12",
-    "tsx": "^4.11.0",
-    "typescript": "^5.4.5"
+    "@types/node": "^20.9.3",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.2.16",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.19",
+    "nodemon": "^3.0.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.0.2"
   }
 }
