--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "blockly": "^11.1.0",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
+    "input-otp": "^1.2.4",
+    "jotai": "^2.8.2",
     "level": "^8.0.1",
+    "lucide-react": "^0.381.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-resizable-panels": "^2.0.19",
@@ -24,6 +29,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-ws": "^3.0.4",
     "@types/node": "^20.9.3",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.2.16",
