--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@blockly/continuous-toolbox": "^6.0.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-switch": "^1.0.3",
     "blockly": "^11.1.0",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
