--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^20.9.3",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.2.16",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.19",
     "nodemon": "^3.0.1",
