Add i18n / Japanese support

--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "blockly": "^11.1.0",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
+    "i18next": "^23.11.5",
     "input-otp": "^1.2.4",
     "jotai": "^2.8.2",
     "level": "^8.0.1",
     "lucide-react": "^0.381.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.23.1",
     "tsx": "^4.3.0",
