--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "i18next": "^23.11.5",
+    "i18next-fs-backend": "^2.3.1",
     "input-otp": "^1.2.4",
     "jotai": "^2.8.2",
     "level": "^8.0.1",
