--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@auth/express": "^0.5.5",
     "@blockly/continuous-toolbox": "^6.0.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-switch": "^1.0.3",
+    "bcrypt": "^5.1.1",
     "blockly": "^11.1.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "i18next": "^23.11.5",
@@ -26,6 +29,8 @@
     "react-i18next": "^14.1.2",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.23.1",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tsx": "^4.3.0",
     "typescript": "^5.3.2",
     "uuid": "^9.0.1",
@@ -33,6 +38,7 @@
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/express-ws": "^3.0.4",
     "@types/node": "^20.9.3",
