--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@blockly/continuous-toolbox": "^6.0.1",
+    "@lucia-auth/adapter-sqlite": "^3.0.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-switch": "^1.0.3",
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^9.6.0",
     "blockly": "^11.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
@@ -23,15 +26,13 @@
     "input-otp": "^1.2.4",
     "jotai": "^2.8.2",
     "level": "^8.0.1",
+    "lucia": "^3.2.0",
     "lucide-react": "^0.381.0",
-    "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.23.1",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
     "tsx": "^4.3.0",
     "typescript": "^5.3.2",
     "uuid": "^9.0.1",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/better-sqlite3": "^7.6.10",
     "@types/express": "^4.17.21",
     "@types/express-ws": "^3.0.4",
     "@types/node": "^20.9.3",
