⚡️ 🐛 Fix Session Popup Language and Update env and README

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VITE_AUTH_SECRET="0d847813a47f2012dfed508392f9eb80"
-VITE_OPENAI_API_KEY="sk-XXXXXXXXXXXXXXXX"
+# THIS FILE IS FOR EXAMPLE AND DEVELOPMENT PURPOSES ONLY
+
+VITE_AUTH_SECRET="0d847813a47f2012dfed508392f9eb80" # USE YOUR OWN SECRET
+VITE_OPENAI_API_KEY="sk-XXXXXXXXXXXXXXXX" # USE YOUR OWN OPENAI API KEY
