--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "kids-code-tutorial",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +7,8 @@
     "dev": "nodemon -w src/server -x tsx src/server/main.ts",
     "start": "NODE_ENV=production tsx src/server/main.ts",
     "build": "vite build",
-    "reset-user": "tsx src/server/db/users.ts --reset-credentials"
+    "reset-user": "tsx src/server/db/users.ts --reset-credentials",
+    "check": "biome check --apply ."
   },
   "dependencies": {
     "@blockly/continuous-toolbox": "^6.0.1",
@@ -40,6 +41,7 @@
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.2",
     "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.10",
     "@types/express": "^4.17.21",
