--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "input-otp": "^1.2.4",
     "jotai": "^2.8.2",
     "js-yaml": "^4.1.0",
+    "kysely": "^0.27.3",
     "langchain": "^0.2.6",
     "level": "^8.0.1",
     "lucia": "^3.2.0",
