--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "kids-code-tutorial",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,12 +9,7 @@
     "build": "vite build",
     "reset-user": "tsx src/server/db/users.ts --reset-credentials",
     "reset-tutorials": "tsx src/server/db/tutorials.ts --reset-tutorials",
-    "lint": "biome lint ./src/",
-    "format": "biome format ./src/",
-    "check": "biome check ./src/",
-    "lint:fix": "biome lint --apply ./src/",
-    "format:fix": "biome format ./src/ --write",
-    "check:fix": "biome check --apply ./src/"
+    "check": "biome check --apply ."
   },
   "dependencies": {
     "@blockly/continuous-toolbox": "^6.0.1",
