--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"vite-plugin-svgr": "^4.2.0"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "1.8.3",
 		"@types/bcrypt": "^5.0.2",
 		"@types/better-sqlite3": "^7.6.10",
 		"@types/express": "^4.17.21",
