🚨 update Biome.json to ignore lint/suspicious/noArrayIndexKey

--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,8 @@
 				"useExhaustiveDependencies": "info"
 			},
 			"suspicious": {
-				"noExplicitAny": "warn"
+				"noExplicitAny": "warn",
+				"noArrayIndexKey": "info"
 			}
 		}
 	}
