--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@lucia-auth/adapter-sqlite": "^3.0.1",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.1",
 		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-switch": "^1.0.3",
 		"@reactour/tour": "^3.7.0",
