--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-switch": "^1.0.3",
 		"@reactour/tour": "^3.7.0",
+		"@tailwindcss/typography": "^0.5.13",
 		"@types/js-yaml": "^4.0.9",
 		"bcrypt": "^5.1.1",
 		"better-sqlite3": "^9.6.0",
@@ -43,6 +44,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^14.1.2",
+		"react-markdown": "^9.0.1",
 		"react-resizable-panels": "^2.0.19",
 		"react-router-dom": "^6.23.1",
 		"tsx": "^4.3.0",
