--- a/src/server/admin/defaultAppConfig.json
+++ b/src/server/admin/defaultAppConfig.json
@@ -4,8 +4,9 @@
 		"Enable_Create_Room": true
 	},
 	"AI_Settings": {
-		"AI_Model": "gpt-3.5-turbo",
-		"AI_Temperature": 0.5,
-		"Max_Number_of_processes": 1
+		"Chat_AI_Model": "gpt-4o",
+		"Chat_AI_Temperature": 0.5,
+		"Max_Number_of_processes": 1,
+		"Background_AI_Model": "gpt-3.5-turbo"
 	}
 }
