--- a/src/server/admin/defaultAppConfig.json
+++ b/src/server/admin/defaultAppConfig.json
@@ -6,7 +6,6 @@
 	"AI_Settings": {
 		"Chat_AI_Model": "gpt-4o",
 		"Chat_AI_Temperature": 0.5,
-		"Max_Number_of_processes": 1,
-		"Background_AI_Model": "gpt-3.5-turbo"
+		"Max_Number_of_processes": 1
 	}
 }
