--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 	"scripts": {
 		"dev": "nodemon -w src/server -x tsx src/server/main.ts",
 		"start": "NODE_ENV=production tsx src/server/main.ts",
-		"vite-build": "vite build",
-		"build": "vite-build && reset-user && reset-tutorials",
+		"build": "vite build && npm run reset-user && npm run reset-tutorials",
 		"reset-user": "tsx src/server/db/users.ts --reset-credentials",
 		"reset-tutorials": "tsx src/server/db/tutorials.ts --reset-tutorials",
 		"check": "biome check --apply --max-diagnostics=50 ."
