--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.18.2",
 		"express-ws": "^5.0.2",
+		"fast-glob": "^3.3.2",
 		"i18next": "^23.11.5",
 		"i18next-fs-backend": "^2.3.1",
 		"input-otp": "^1.2.4",
