--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-switch": "^1.0.3",
 		"@tailwindcss/typography": "^0.5.13",
+		"@tanstack/react-table": "^8.19.3",
 		"@types/js-yaml": "^4.0.9",
 		"@vitejs/plugin-react": "^4.2.0",
 		"autoprefixer": "^10.4.19",
