--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
 	},
 	"dependencies": {
 		"@blockly/continuous-toolbox": "^6.0.1",
-		"@langchain/openai": "^0.2.0",
 		"@lexical/react": "^0.16.1",
 		"@lucia-auth/adapter-sqlite": "^3.0.1",
 		"@radix-ui/react-dialog": "^1.0.5",
@@ -39,11 +38,11 @@
 		"jotai": "^2.8.2",
 		"js-yaml": "^4.1.0",
 		"kysely": "^0.27.3",
-		"langchain": "^0.2.6",
 		"level": "^8.0.1",
 		"lexical": "^0.16.1",
 		"lucia": "^3.2.0",
 		"lucide-react": "^0.381.0",
+		"openai": "^4.52.7",
 		"postcss": "^8.4.39",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -57,7 +56,8 @@
 		"uuid": "^9.0.1",
 		"vectra": "^0.7.6",
 		"vite-express": "*",
-		"vite-plugin-svgr": "^4.2.0"
+		"vite-plugin-svgr": "^4.2.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
