✨ 🚧 PostgreSQL on docker

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,6 +3,10 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-ENV PORT=3000
+ENV PORT=3000 \
+    DATABASE_HOST="db" \
+    DATABASE_USER="postgres" \
+    DATABASE_PASSWORD="postgres" \
+    DATABASE_NAME="code_tutorial_db"
 EXPOSE 3000
 CMD ["npm", "run", "dev"]
