--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3.8'
 
 services:
+  db:
+    container_name: code-tutorial-db-dev
+    image: postgres:14
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: code_tutorial_db
+      PGDATA: /var/lib/postgresql/data/pgdata
+      TZ: UTC
+    ports:
+      - "5432:5432"
   app: 
     container_name: code-tutorial-app-dev
     build:
@@ -14,12 +25,7 @@ services:
     env_file:
       - .env
     command: npm run dev
-  db:
-    container_name: code-tutorial-db-dev
-    image: postgres:14
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: code_tutorial_db
+    depends_on:
+      - db
+volumes:
+  pgdata:
