--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,10 +5,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 ENV PORT=80 \
-    DATABASE_HOST="db" \
-    DATABASE_USER="postgres" \
-    DATABASE_PASSWORD="postgres" \
-    DATABASE_NAME="code_tutorial_db"\
+    #シークレット
     NODE_ENV=production
 EXPOSE 80
 CMD ["npm", "start"]
