--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"react-markdown": "^9.0.1",
 		"react-resizable-panels": "^2.0.19",
 		"react-router-dom": "^6.23.1",
+		"redis": "^4.6.15",
 		"tailwindcss": "^3.4.4",
 		"tsx": "^4.3.0",
 		"typescript": "^5.3.2",
