--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,11 @@
 version: '3.8'
 
 services:
+  redis:
+    container_name: code-tutorial-redis-prod
+    image: redis/redis-stack-server:latest
+    ports:
+      - "6379:6379"
   db:
     container_name: code-tutorial-db-prod
     image: postgres:14
