--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./app
         file: Dockerfile.prod
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/code-tutorial-app:latest
