🎨 Updated config of docker for production

--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -11,7 +11,6 @@ RUN npm install
 
 # Copy all files from the backend directory to the working directory
 COPY . .
-RUN npm run build
 ENV PORT=${PORT} \
     #シークレット
     NODE_ENV=production
@@ -20,4 +19,4 @@ ENV PORT=${PORT} \
 EXPOSE ${PORT}
 
 # Command to run the application
-CMD ["npm", "start"]
+CMD ["npm", "run", "build"]
