--- a/app/package.json
+++ b/app/package.json
@@ -64,7 +64,8 @@
 		"vectra": "^0.7.6",
 		"vite-express": "*",
 		"vite-plugin-svgr": "^4.2.0",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"drizzle-kit": "^0.23.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
@@ -77,7 +78,6 @@
 		"@types/react": "^18.0.38",
 		"@types/react-dom": "^18.2.16",
 		"@types/uuid": "^9.0.8",
-		"drizzle-kit": "^0.23.0",
 		"nodemon": "^3.0.1",
 		"vite": "^5.0.2"
 	}
