--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,15 @@ services:
   db:
     container_name: code-tutorial-db-dev
     image: postgres:14
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: code_tutorial_db
-      PGDATA: /var/lib/postgresql/data/pgdata
-      TZ: UTC
     ports:
       - "5432:5432"
+    environment:
+      POSTGRES_USER: $DB_USER
+      POSTGRES_PASSWORD: $DB_PASSWORD
+      POSTGRES_DB: $DB_NAME
+      PGDATA: /var/lib/postgresql/data/pgdata
+      TZ: UTC
+
   app: 
     container_name: code-tutorial-app-dev
     build:
