--- a/package.json
+++ b/package.json
@@ -4,29 +4,37 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
+		"preinstall": "npx only-allow pnpm",
 		"dev": "nodemon -w src/server -x tsx src/server/main.ts",
 		"start": "NODE_ENV=production tsx src/server/main.ts",
 		"build": "vite build",
-		"check": "biome check --apply --max-diagnostics=50 .",
+		"check": "biome check --apply --max-diagnostics=50 ./src ",
 		"drizzle:generate": "drizzle-kit generate --config=drizzle.config.ts",
 		"drizzle:push": "drizzle-kit push --config=drizzle.config.ts",
 		"drizzle:introspect": "drizzle-kit introspect --config=drizzle.config.ts",
 		"drizzle:studio": "drizzle-kit studio --config=drizzle.config.ts",
 		"reset-credential": "tsx src/server/db/users.ts --reset-credentials",
-		"reset-tutorials": "tsx src/server/db/tutorials.ts --reset-tutorials"
+		"reset-tutorials": "tsx src/server/db/tutorials.ts --reset-tutorials",
+		"format": "biome format . --write",
+		"lint": "biome check .",
+		"lint:fix": "pnpm lint --write",
+		"prepare": "pnpm simple-git-hooks"
+	},
+	"simple-git-hooks": {
+		"pre-commit": "pnpm format && pnpm lint:fix"
 	},
 	"dependencies": {
-		"@blockly/continuous-toolbox": "^6.0.1",
+		"@blockly/continuous-toolbox": "^6.0.5",
 		"@lexical/react": "^0.16.1",
 		"@lucia-auth/adapter-drizzle": "^1.0.7",
 		"@lucia-auth/adapter-postgresql": "^3.1.2",
-		"@lucia-auth/adapter-sqlite": "^3.0.1",
+		"@lucia-auth/adapter-sqlite": "^3.0.2",
 		"@radix-ui/react-accordion": "^1.2.0",
-		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.1",
 		"@radix-ui/react-progress": "^1.1.0",
-		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-switch": "^1.1.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"@tanstack/react-table": "^8.19.3",
 		"@types/js-yaml": "^4.0.9",
@@ -34,54 +42,55 @@
 		"autoprefixer": "^10.4.19",
 		"bcrypt": "^5.1.1",
 		"better-sqlite3": "^9.6.0",
-		"blockly": "^11.1.0",
+		"blockly": "^11.1.1",
 		"dotenv": "^16.4.5",
 		"drizzle-kit": "^0.23.0",
-		"drizzle-orm": "^0.32.0",
-		"express": "^4.18.2",
+		"drizzle-orm": "^0.32.1",
+		"express": "^4.19.2",
 		"express-ws": "^5.0.2",
 		"fast-glob": "^3.3.2",
-		"i18next": "^23.11.5",
+		"i18next": "^23.12.2",
 		"i18next-fs-backend": "^2.3.1",
 		"input-otp": "^1.2.4",
-		"jotai": "^2.8.2",
+		"jotai": "^2.9.1",
 		"js-yaml": "^4.1.0",
-		"kysely": "^0.27.3",
+		"kysely": "^0.27.4",
 		"level": "^8.0.1",
 		"lexical": "^0.16.1",
 		"lucia": "^3.2.0",
 		"lucide-react": "^0.381.0",
-		"nodemon": "^3.0.1",
-		"openai": "^4.52.7",
+		"nodemon": "^3.1.4",
+		"openai": "^4.53.2",
 		"pg": "^8.12.0",
-		"postcss": "^8.4.39",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-i18next": "^14.1.2",
+		"postcss": "^8.4.40",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-i18next": "^14.1.3",
 		"react-markdown": "^9.0.1",
-		"react-resizable-panels": "^2.0.19",
-		"react-router-dom": "^6.23.1",
-		"redis": "^4.6.15",
-		"tailwindcss": "^3.4.4",
-		"tsx": "^4.3.0",
-		"typescript": "^5.3.2",
+		"react-resizable-panels": "^2.0.22",
+		"react-router-dom": "^6.25.1",
+		"redis": "^4.7.0",
+		"simple-git-hooks": "^2.11.1",
+		"tailwindcss": "^3.4.7",
+		"tsx": "^4.16.2",
+		"typescript": "^5.5.4",
 		"uuid": "^9.0.1",
 		"vectra": "^0.7.6",
-		"vite": "^5.0.2",
-		"vite-express": "*",
+		"vite": "^5.3.5",
+		"vite-express": "^0.17.0",
 		"vite-plugin-svgr": "^4.2.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
 		"@types/bcrypt": "^5.0.2",
-		"@types/better-sqlite3": "^7.6.10",
+		"@types/better-sqlite3": "^7.6.11",
 		"@types/express": "^4.17.21",
 		"@types/express-ws": "^3.0.4",
-		"@types/node": "^20.9.3",
+		"@types/node": "^20.14.13",
 		"@types/pg": "^8.11.6",
-		"@types/react": "^18.0.38",
-		"@types/react-dom": "^18.2.16",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
 		"@types/uuid": "^9.0.8"
 	}
 }
