--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,28 +1,32 @@
+# ベースイメージとして Node.js 20.14.0 を使用
 FROM node:20.14.0
 
-# Set the working directory to 
-WORKDIR /app
+# 作業ディレクトリを / に設定
+WORKDIR /tutorial_app_prod
 
-# Copy package.json and package-lock.json to the working directory
-COPY package*.json ./
+# package.json と pnpm-lock.yaml を作業ディレクトリにコピー
+COPY package.json pnpm-lock.yaml ./
 
-# Install dependencies
-RUN npm install
+# 依存関係をインストール
+RUN npm install -g pnpm && pnpm install
 
-# Copy all files from the backend directory to the working directory
+# 全てのファイルを作業ディレクトリにコピー
 COPY . .
-RUN npm run build
 
+# ビルドを実行
+RUN pnpm run build
+
+# ビルド時に使用するポートを設定
 ARG PORT=8080
 ENV PORT=${PORT} \
-    #シークレット
+    # シークレット
     NODE_ENV=production
 
-# Expose the port
+# ポートを公開
 EXPOSE ${PORT}
 
-# Command to run the application
-# If you need to reset tutorial and credential, you can add the following options when its start.:
-# npm run reset-credential
-# npm run reset-tutorials
-CMD ["sh", "-c", "npm run drizzle:generate && npm run drizzle:push && npm run start"]
+# アプリケーションを実行するコマンド
+# チュートリアルと認証情報をリセットする場合は、以下のオプションを追加できます：
+# pnpm run reset-credential
+# pnpm run reset-tutorials
+CMD ["sh", "-c", "pnpm run drizzle:generate && pnpm run drizzle:push && pnpm run start"]
