--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"pre-commit": "pnpm format && pnpm lint:fix"
 	},
 	"dependencies": {
-		"@blockly/continuous-toolbox": "^6.0.5",
+		"@blockly/continuous-toolbox": "^6.0.6",
 		"@lexical/code": "^0.16.1",
 		"@lexical/markdown": "^0.16.1",
 		"@lexical/react": "^0.16.1",
@@ -40,21 +40,24 @@
 		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-switch": "^1.1.0",
 		"@tailwindcss/typography": "^0.5.13",
-		"@tanstack/react-table": "^8.19.3",
+		"@tanstack/react-table": "^8.20.1",
 		"@types/js-yaml": "^4.0.9",
 		"@vitejs/plugin-react": "^4.3.1",
-		"autoprefixer": "^10.4.19",
+		"autoprefixer": "^10.4.20",
 		"bcrypt": "^5.1.1",
 		"better-sqlite3": "^9.6.0",
 		"blockly": "^11.1.1",
 		"dotenv": "^16.4.5",
-		"drizzle-kit": "^0.23.0",
+		"drizzle-kit": "^0.23.1",
 		"drizzle-orm": "^0.32.1",
 		"express": "^4.19.2",
 		"express-ws": "^5.0.2",
 		"fast-glob": "^3.3.2",
+		"get-port": "^7.1.0",
+		"http-proxy": "^1.18.1",
+		"http-proxy-middleware": "^3.0.0",
 		"i18next": "^23.12.2",
-		"i18next-fs-backend": "^2.3.1",
+		"i18next-fs-backend": "^2.3.2",
 		"input-otp": "^1.2.4",
 		"jotai": "^2.9.1",
 		"js-yaml": "^4.1.0",
@@ -64,7 +67,7 @@
 		"lucia": "^3.2.0",
 		"lucide-react": "^0.381.0",
 		"nodemon": "^3.1.4",
-		"openai": "^4.53.2",
+		"openai": "^4.54.0",
 		"pg": "^8.12.0",
 		"postcss": "^8.4.40",
 		"react": "^18.3.1",
@@ -72,17 +75,19 @@
 		"react-i18next": "^14.1.3",
 		"react-markdown": "^9.0.1",
 		"react-resizable-panels": "^2.0.22",
-		"react-router-dom": "^6.25.1",
+		"react-router-dom": "^6.26.0",
 		"redis": "^4.7.0",
 		"simple-git-hooks": "^2.11.1",
 		"tailwindcss": "^3.4.7",
-		"tsx": "^4.16.2",
+		"tiny-worker": "^2.3.0",
+		"tsx": "^4.16.5",
 		"typescript": "^5.5.4",
 		"uuid": "^9.0.1",
 		"vectra": "^0.7.6",
 		"vite": "^5.3.5",
 		"vite-express": "^0.17.0",
 		"vite-plugin-svgr": "^4.2.0",
+		"ws": "^8.18.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
@@ -91,7 +96,8 @@
 		"@types/better-sqlite3": "^7.6.11",
 		"@types/express": "^4.17.21",
 		"@types/express-ws": "^3.0.4",
-		"@types/node": "^20.14.13",
+		"@types/http-proxy": "^1.17.14",
+		"@types/node": "^20.14.14",
 		"@types/pg": "^8.11.6",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
