--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -14,10 +14,11 @@ RUN npm install -g pnpm && pnpm install
 COPY . .
 
 # 環境変数を設定
-ENV PORT=3000
+ENV PORT=3000 \
+    VM_PORT=3001
 
 # ポート3000を公開
-EXPOSE 3000
+EXPOSE 3000 3001
 
 # アプリケーションを実行するコマンド
 # チュートリアルと認証情報をリセットする場合は、以下のオプションを追加できます：
