--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       - "$PORT:$PORT"
+      - "$VM_PORT:$VM_PORT"
     env_file:
       - .env
     command: >
