--- a/package.json
+++ b/package.json
@@ -47,11 +47,12 @@
 		"bcrypt": "^5.1.1",
 		"better-sqlite3": "^9.6.0",
 		"blockly": "^11.1.1",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"drizzle-kit": "^0.23.1",
 		"drizzle-orm": "^0.32.1",
 		"express": "^4.19.2",
-		"express-ws": "^5.0.2",
+		"express-http-proxy": "^2.0.0",
 		"fast-glob": "^3.3.2",
 		"get-port": "^7.1.0",
 		"http-proxy": "^1.18.1",
@@ -78,6 +79,8 @@
 		"react-router-dom": "^6.26.0",
 		"redis": "^4.7.0",
 		"simple-git-hooks": "^2.11.1",
+		"socket.io": "^4.7.5",
+		"socket.io-client": "^4.7.5",
 		"tailwindcss": "^3.4.7",
 		"tiny-worker": "^2.3.0",
 		"tsx": "^4.16.5",
@@ -94,8 +97,9 @@
 		"@biomejs/biome": "1.8.3",
 		"@types/bcrypt": "^5.0.2",
 		"@types/better-sqlite3": "^7.6.11",
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
-		"@types/express-ws": "^3.0.4",
+		"@types/express-http-proxy": "^1.6.6",
 		"@types/http-proxy": "^1.17.14",
 		"@types/node": "^20.14.14",
 		"@types/pg": "^8.11.6",
