--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 	},
 	"dependencies": {
 		"@blockly/continuous-toolbox": "^6.0.6",
+		"@hono/node-server": "^1.12.0",
+		"@hono/node-ws": "^1.0.4",
 		"@lexical/code": "^0.16.1",
 		"@lexical/markdown": "^0.16.1",
 		"@lexical/react": "^0.16.1",
@@ -55,6 +57,7 @@
 		"express-http-proxy": "^2.0.0",
 		"fast-glob": "^3.3.2",
 		"get-port": "^7.1.0",
+		"hono": "^4.5.4",
 		"http-proxy": "^1.18.1",
 		"http-proxy-middleware": "^3.0.0",
 		"i18next": "^23.12.2",
