--- a/src/server/admin/defaultAppConfig.json
+++ b/src/server/admin/defaultAppConfig.json
@@ -1,14 +1,21 @@
 {
 	"General_Settings": {
 		"Enable_Join_by_code": true,
-		"Enable_Create_Room": true
+		"Enable_Create_Room": true,
+		"Enable_Memory_Use_Log": false
 	},
 	"AI_Settings": {
 		"Chat_AI_Model": "gpt-4o",
 		"Chat_AI_Temperature": 0.5
 	},
 	"Client_Settings": {
-		"AutoReply": true,
+		"AutoReply": false,
 		"Reply_Time_ms": 5000
+	},
+	"Code_Execution_Limits": {
+		"Max_CodeRangeSizeMb": 50,
+		"Max_OldGenerationSizeMb": 50,
+		"Max_YoungGenerationSizeMb": 50,
+		"Max_Num_Message_Queue": 10
 	}
 }
