--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,8 +1,8 @@
 # ベースイメージとして Node.js 20.14.0 を使用
 FROM node:20.14.0
 
-# 必要なパッケージをインストール
-RUN apt-get update && apt-get install -y iproute2 net-tools
+# 必要なパッケージをインストール。prodではSSL証明書の取得に必要な certbot を追加
+RUN apt-get update && apt-get install -y iproute2 net-tools certbot
 
 
 # 作業ディレクトリを / に設定
