--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,7 +33,8 @@ services:
       context: .
       dockerfile: Dockerfile.prod
     ports:
-      - $PORT:$PORT
+      - $HTTP_PORT:$HTTP_PORT
+      - $HTTPS_PORT:$HTTPS_PORT
       - $VM_PORT:$VM_PORT
     restart: always
     env_file:
@@ -58,5 +59,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
 volumes:
   db_data_db:
