--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,11 +7,17 @@ services:
     # Enables the web UI and tells Traefik to listen to docker
     command:
       - --api.insecure=true
-      - --providers.docker
+      - --accesslog=true
+      - --accesslog.addinternals
+      - --metrics.addinternals
+      - --tracing=true
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
       - --entrypoints.web.address=:80
       - --entrypoints.websecure.address=:443
-      - --certificatesresolvers.myresolver.acme.tlschallenge=true
-      - --certificatesresolvers.myresolver.acme.email=$ACME_EMAIL
+      - --certificatesresolvers.myresolver.acme.httpchallenge=true
+      - --certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web
+      - --certificatesresolvers.myresolver.acme.email=$EMAIL
       - --certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json
     ports:
       # The HTTP port
@@ -58,6 +64,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.code-tutorial-app-prod.rule=Host(`$DOMAIN`)"
+      - "traefik.http.routers.whoami.entrypoints=websecure"
+      - "traefik.http.routers.whoami.tls.certresolver=myresolver"
     restart: always
     env_file:
       - .env
