--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
 		"vite": "^5.3.5",
 		"vite-express": "^0.17.0",
 		"vite-plugin-svgr": "^4.2.0",
+		"vite-plugin-pwa": "^0.20.0",
 		"ws": "^8.18.0",
 		"zod": "^3.23.8"
 	},
