--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"module": "ESNext",
-		"moduleResolution": "Bundler",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"jsx": "react-jsx",
 		"jsxImportSource": "react"
 	}
